--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": "18.16.0"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
